Enable java compiler preview